--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,6 +18,16 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+
+.container {
+  overflow: hidden;
+  width: 450px;
+  background-color: #FFFFFF;
+  padding: 140px 0 50px 0;
+  margin: 0 auto;
 }
 
 /*
