added user registration and log in, and likes feature

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,6 +30,31 @@ body {
   margin: 0 auto;
 }
 
+#loginBtn, #RegisterBtn {
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 5px;
+  padding: 18px;
+  color: #00a087;
+  font-size: 18px;
+  margin: 0;
+}
+
+#regBtnContainer, #loginBtnContainer {
+  list-style-type: none;
+  border: 1.3px #000 solid;
+  width: 128px;
+  display: inline-block;
+  background-color: #E5F5F3;
+  border-radius: 5px;
+  margin: 0 10px;
+}
+
+.LoginRegisterButtons {
+  display: flex;
+  justify-content: center;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
