--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -23,15 +23,18 @@
   line-height: 80px;
 }
 
-#Compose {
+#Compose, #Logout {
   display: inline-block;
   text-decoration: none;
-  float: right;
   border-radius: 5px;
   padding: 18px;
   color: #00a087;
   font-size: 18px;
-  margin-top: 0;
+  margin: 0;
+}
+
+#Logout {
+  margin-left: 13px;
 }
 
 ul {
@@ -50,6 +53,7 @@ ul {
   float: right;
   background-color: #E5F5F3;
   border-radius: 5px;
+  margin: 0 10px;
 }
 
 .button1:hover {
