--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -11,6 +11,10 @@
   padding: 10px;
 }
 
+.new-tweet.noShow {
+  display: none;
+}
+
 .new-tweet textarea {
   display: block;
   margin-bottom: 5px;
